Revert "Avoid change note published_at wrapping onto another line."
This reverts commit 89af809ccb1dcc86fb3f841c1811796e4c85f950.

--- a/app/assets/stylesheets/website/page_headers.scss
+++ b/app/assets/stylesheets/website/page_headers.scss
@@ -106,7 +106,7 @@
           width: 70%;
 
           @media only screen and (min-width: 720px) {
-            width: 77%;
+            width: 80%;
           }
         }
 
@@ -121,7 +121,7 @@
           text-align: right;
 
           @media only screen and (min-width: 720px) {
-            width: 20%;
+            width: 17%;
           }
         }
       }
